2005-09-25  Karl Lehenbauer  <karl-rivet@sc.com>

	* src/rivetCore.c, src/mod_rivet.c, src/mod_rivet.h: Updated
	code comments.  In particular, every function in src/mod_rivet.c
	now has a standard header.

2005-09-23  David N. Welton  <davidw@dedasys.com>

	* genconf.sh: Added autoheaders.

	* doc/Makefile.am (docs): Documentation is now its own target -
	this means it doesn't get run as part of 'all'.

2005-09-22  Karl Lehenbauer  <karl-rivet@sc.com>

	* rivet/packages/dio/dio.tcl: "DIO insert" method is much more 
	efficient than "DIO store" when you know you want an insert and
	not an update and now actually works.

	* README.MacOSX:  GNU autoconf/configure script does not actually 
	work to make the Rivet module on Mac OS X so the README has been
	reverted to show it the old-school way using the Tcl build scripts.

2005-08-21  David N. Welton  <davidw@dedasys.com>

	* doc/html/rivet.css: CSS tweaks for documentation.

	* doc/rivet.xml: Updated build directions to ./configure ; make ;
	make install.

	* src/rivetCore.c (Rivet_Upload): Fixed a line that is complained
	about in newer GCC's (casting lvalues).

2005-08-19  David N. Welton  <davidw@dedasys.com>

	* src/mod_rivet.c (Rivet_InitTclStuff): Use both the hostname and
	the port in creating names for the slave.  This fixes a bug where
	you have different virtual hosts running on the same server name
	but different ports.

2005-08-13  David N. Welton  <davidw@dedasys.com>

	* tests/apachetest/apachetest.tcl: Make sure we get our own
	version of http.tcl.  Tcl Feature request 928154 means that we
	need our own copy of http.tcl for now.

	* tests/runtests.tcl (runtests_usage): Print out an error message
	if the arguments aren't right. Fixed paths to load .so files, as
	the auto tools put them in a different place.

	* tests/apachetest/apachetest.tcl (apachetest::getbinname): Check
	to make sure the server is executable.

	* src/apache_request.c (ApacheRequest_parse_urlencoded): Patch