@@ -14,6 +14,9 @@
 ##	-subst <on|off> - Each word should be considered a variable and subst'd.
 ##	-separator <string> - A text string that goes between each variable.
 ##	-ip <ip address> - A list of IP addresses to display to.
+##
+## $Id$
+##
 ###
 
 proc debug {args} {
