@@ -1,8 +1,12 @@
 ###
+##
 ## load_response ?arrayName?
 ##    Load any form variables passed to this page into an array.
 ##
 ##    arrayName - Name of the array to set.  Default is 'response'.
+##
+## $Id$
+##
 ###
 
 proc load_response {{arrayName response}} {
