@@ -3,6 +3,9 @@
 ##    Read the entire contents of a file and return it as a string.
 ##
 ##    file - Name of the file to read.
+##
+## $Id$
+##
 ###
 
 proc read_file {file} {
